Squash some nagging style issues (#147)
* adds back a missing space between the last word before email address and the start of the email address in info dropdown

* de-smush pageheader on small screens

* prevent the running together of Your Stats and Showing into Your StatsShowing

* update test to no longer expect subtitle

--- a/client/src/components/FrequencyChart/FrequencyChart.scss
+++ b/client/src/components/FrequencyChart/FrequencyChart.scss
@@ -10,6 +10,7 @@
 
     .card-title {
       display: flex;
+      flex-wrap: wrap;
       justify-content: space-between;
     }
   }
